--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/mic.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">micro phone</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/airpod.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">Airbuds</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/drone.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">Drone</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/lights.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">Light setup</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/setup.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">photoshoot</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/camera.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">vlogging camera</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/single-light.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">Action Camera</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
