--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="product">
                     <div class="product-img"><img src="images/action.png" alt=""></div>
-                    <h3 class="product-title">Flex tripod</h3>
+                    <h3 class="product-title">Flex tripodd</h3>
                     <h3 class="product-value">$50.35</h3>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
