--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <main>
         <h3 id="top-influencer">Influencer products</h3>
         <!-- Influencer first part -->
-        <section>
+        <section class="first-container">
             <div class="first-influencer">
                 <h1 class="section-title">Start your journey as Influencer</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, assumenda. Atque minima
-                    beatae quidem eos fuga! Architecto eos, animi veritatis neque labore maiores reiciendis
-                    repellat, expedita, numquam officia iure quia.</p>
+                <p>An influencer is someone in your niche or industry with sway over your target audience. Influencers
+                    have specialized knowledge, authority or insight into a specific subject. Their pre-existing
+                    presence in a niche makes them a useful launching pad for brands in search of credibilit</p>
                 <a class="button" href="">Prebook now <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="first-influencer">
@@ -174,5 +174,41 @@
                 </div>
 
             </div>
+            <a id="next-product" href="next-product">see more <i class="fas fa-arrow-right"></i></a>
+        </section>
+        <!-- try something -->
+        <section id="happiness">
+            <div>
+                <img src="images/belon.png" alt="">
+            </div>
+            <div>
+                <h1 class="section-title">The Happiness</h1>
+                <p>Honestly, I don’t claim to be 100 percent happy, even though life is good and meaningful. I have a
+                    purpose. But dwelling on making myself happy has never been my habit. I strive for feeling my best
+                    every day—being energetic, yet calm—free of fear, worry, anxiety, and depression—being able to
+                    manage stress—and appreciating what I have, not focusing on what I don’t have. It’s a prerequisite
+                    for happiness.</p>
+                <a class="button" href="">clik here </a>
+
+            </div>
+
+        </section>
+        <!-- foooter -->
+
+        <section class="last-product">
+            <div>
+                <h1>Influencer products</h1>
+                <div class="soical-media">
+                    <footer>&copy; Copyright 2022 influencer products </footer>
+                    <footer>Al rights reserved</footer>
+                </div>
+                <div>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
